update the portfolio

--- a/index.html
+++ b/index.html
@@ -3,17 +3,124 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpeg" href="./src/assets/head_icon.jpeg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aditya Bagade - PortFolio</title>
+  
+  <!-- SEO Meta Tags -->
+  <title>Aditya Bagade - Full-Stack Developer | React, Node.js, TypeScript Expert</title>
+  <meta name="description" content="Aditya Bagade - Full-Stack Developer with 2+ years experience building scalable web applications, SaaS platforms, and AI-powered solutions using React, Node.js, TypeScript, and AWS. Available for freelance projects." />
+  <meta name="keywords" content="Full Stack Developer, React Developer, Node.js Developer, TypeScript, AWS, SaaS Development, API Development, AI Integration, Web Development, Freelance Developer, Pune Developer" />
+  <meta name="author" content="Aditya Bagade" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Aditya Bagade - Full-Stack Developer | React, Node.js, TypeScript Expert" />
+  <meta property="og:description" content="Building scalable web applications, SaaS platforms, and AI-powered automation tools. 2+ years of professional experience with modern technologies." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://aditya.codeclout.in/" />
+  <meta property="og:image" content="https://aditya.codeclout.in/og-image.jpg" />
+  <meta property="og:site_name" content="Aditya Bagade Portfolio" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Aditya Bagade - Full-Stack Developer" />
+  <meta name="twitter:description" content="Building scalable web applications and AI-powered solutions with React, Node.js, and TypeScript" />
+  <meta name="twitter:image" content="https://aditya.codeclout.in/twitter-image.jpg" />
+  <meta name="twitter:creator" content="@its_aadi04" />
+  
+  <!-- Additional SEO Tags -->
+  <meta name="theme-color" content="#B415FF" />
+  <meta name="msapplication-TileColor" content="#B415FF" />
+  <meta name="application-name" content="Aditya Bagade Portfolio" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/jpeg" href="./src/assets/head_icon.jpeg" />
+  <link rel="apple-touch-icon" href="./src/assets/head_icon.jpeg" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://aditya.codeclout.in/" />
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Aditya Bagade",
+    "jobTitle": "Full-Stack Developer",
+    "description": "Full-Stack Developer with 2+ years experience building scalable web applications, SaaS platforms, and AI-powered automation tools",
+    "url": "https://aditya.codeclout.in/",
+    "email": "adityabagade04@gmail.com",
+    "telephone": "+919325253293",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Pune",
+      "addressRegion": "Maharashtra",
+      "addressCountry": "India"
+    },
+    "sameAs": [
+      "https://github.com/ADI9325",
+      "https://www.linkedin.com/in/its-aadi04/",
+      "https://www.instagram.com/its_aadi04",
+      "https://leetcode.com/u/its_adii04/"
+    ],
+    "knowsAbout": [
+      "React.js",
+      "Node.js",
+      "TypeScript",
+      "JavaScript",
+      "Python",
+      "AWS",
+      "MongoDB",
+      "MySQL",
+      "Express.js",
+      "Next.js",
+      "API Development",
+      "SaaS Development",
+      "AI Integration"
+    ],
+    "alumniOf": {
+      "@type": "CollegeOrUniversity",
+      "name": "Savitribai Phule Pune University"
+    },
+    "worksFor": {
+      "@type": "Organization",
+      "name": "CodeClout Technology Pvt. Ltd."
+    }
+  }
+  </script>
+  
+  <!-- Performance Optimization -->
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  
+  <!-- Preload Critical Resources -->
+  <link rel="preload" href="./src/assets/theme_pattern.svg" as="image">
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  
+  <!-- Schema Markup for Website -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Aditya Bagade Portfolio",
+    "url": "https://aditya.codeclout.in/",
+    "description": "Professional portfolio of Aditya Bagade, Full-Stack Developer specializing in React, Node.js, and modern web technologies",
+    "author": {
+      "@type": "Person",
+      "name": "Aditya Bagade"
+    },
+    "inLanguage": "en-US"
+  }
+  </script>
 </body>
 
 </html>
